--- a/package.json
+++ b/package.json
@@ -16,9 +16,16 @@
     "@angular/compiler": "~10.1.2",
     "@angular/core": "~10.1.2",
     "@angular/forms": "~10.1.2",
+    "@angular/http": "^7.2.16",
     "@angular/platform-browser": "~10.1.2",
     "@angular/platform-browser-dynamic": "~10.1.2",
     "@angular/router": "~10.1.2",
+    "jquery": "^3.5.1",
+    "jwt-decode": "^3.1.2",
+    "ng2-pdf-viewer": "^6.3.2",
+    "ng2-pdfjs-viewer": "^5.0.7",
+    "ngx-cookie": "^5.0.0",
+    "ngx-microsoft-bot-framework": "^1.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
