--- a/package.json
+++ b/package.json
@@ -20,14 +20,22 @@
     "@angular/platform-browser": "~10.1.2",
     "@angular/platform-browser-dynamic": "~10.1.2",
     "@angular/router": "~10.1.2",
+    "@types/pdfjs-dist": "^2.1.7",
+    "angular-oauth2-oidc": "^10.0.3",
+    "angular-oauth2-oidc-jwks": "^9.0.0",
+    "classlist.js": "^1.1.20150312",
     "jquery": "^3.5.1",
     "jwt-decode": "^3.1.2",
     "ng2-pdf-viewer": "^6.3.2",
     "ng2-pdfjs-viewer": "^5.0.7",
     "ngx-cookie": "^5.0.0",
+    "ngx-extended-pdf-viewer": "^7.3.2",
     "ngx-microsoft-bot-framework": "^1.1.0",
+    "ngx-ui-loader": "^10.0.0",
+    "pdfjs-dist": "^2.5.207",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "web-animations-js": "^2.3.2",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
