--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.1.2",
+    "@angular/cdk": "^10.2.7",
     "@angular/common": "~10.1.2",
     "@angular/compiler": "~10.1.2",
     "@angular/core": "~10.1.2",
     "@angular/forms": "~10.1.2",
     "@angular/http": "^7.2.16",
+    "@angular/material": "^11.1.1",
     "@angular/platform-browser": "~10.1.2",
     "@angular/platform-browser-dynamic": "~10.1.2",
     "@angular/router": "~10.1.2",
+    "@ngtools/webpack": "^7.3.10",
     "@types/pdfjs-dist": "^2.1.7",
     "angular-oauth2-oidc": "^10.0.3",
     "angular-oauth2-oidc-jwks": "^9.0.0",
@@ -29,6 +32,7 @@
     "ng2-pdf-viewer": "^6.3.2",
     "ng2-pdfjs-viewer": "^5.0.7",
     "ngx-cookie": "^5.0.0",
+    "ngx-daterangepicker-material": "^4.0.1",
     "ngx-extended-pdf-viewer": "^7.3.2",
     "ngx-microsoft-bot-framework": "^1.1.0",
     "ngx-ui-loader": "^10.0.0",
